--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,10 @@
 Rails:
   Enabled: true
+
+require: rubocop-rspec
+
 AsciiComments:
   Enabled: false
-require: rubocop-rspec
+
+Style/EmptyMethod:
+  Enabled: false
