Revise test according to rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,3 +8,18 @@ AsciiComments:
 
 Style/EmptyMethod:
   Enabled: false
+
+Style/Documentation:
+  Enabled: false
+
+AllCops:
+  Include:
+    - '**/Gemfile'
+    - '**/Rakefile'
+    - '**/config.ru'
+  Exclude:
+    - 'db/**/*'
+    - 'config/**/*'
+    - 'script/**/*'
+    - '**/Guardfile'
+    - !ruby/regexp /old_and_unused\.rb$/
