--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -27,6 +27,11 @@ malory:
   activated: true
   activated_at: <%= Time.zone.now %>
 
+unactivated:
+  name: Bob Unactivated
+  email: bob@example.co
+  password_digest: <%= User.digest('password') %>
+
 <% 30.times do |n| %>
 user_<%= n %>:
   name: <%= "User #{n}" %>
