--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -1,15 +1,26 @@
 orange:
-  conent: 'I just ate an orange!'
-  create_at: <%= 10.minutes.ago %>
+  content: 'I just ate an orange!'
+  created_at: <%= 10.minutes.ago %>
+  user: michael
 
 tau_manifesto:
-  conent: 'Check out the @tauday site by @mhartl: http://tauday.com'
-  create_at: <%= 3.years.ago %>
+  content: 'Check out the @tauday site by @mhartl: http://tauday.com'
+  created_at: <%= 3.years.ago %>
+  user: michael
 
 cat_video:
   content: "Sad cats are sad: http://youtu.be/PKffm2uI4dk"
   created_at: <%= 2.hours.ago %>
+  user: michael
 
 most_recent:
   content: "Writing a short test"
   created_at: <%= Time.zone.now %>
+  user: michael
+
+<% 30.times do |n| %>
+micropost_<%= n %>:
+  content: <%= Faker::Lorem.sentence(5) %>
+  created_at: <%= 42.days.ago %>
+  user: michael
+<% end %>
